--- a/styles.css
+++ b/styles.css
@@ -1,402 +1,301 @@
-*,
-*::after,
-*::before {
-  padding: 0;
-  margin: 0;
-  box-sizing: border-box;
+#envelope {
+  margin: 150px;
+  position: relative;
+  width: 280px;
+  height: 180px;
+  border-bottom-left-radius: 6px;
+  border-bottom-right-radius: 6px;
+  margin-left: auto;
+  margin-right: auto;
+  top: 150px;
+  background-color: #c5dbf9;
+  box-shadow: 0 4px 20px rgba(0, 0, 0, 0.2);
 }
-:root {
-  --color-bg: linear-gradient(to top, #2c0e22, #000005);
-  --color-glass: linear-gradient(to left, #142544, #1a9092);
-  --color-water: linear-gradient(to left, #142544, #1b6d6e);
+
+.front {
+  position: absolute;
+  width: 0;
+  height: 0;
+  z-index: 3;
+}
+
+.flap {
+  border-left: 140px solid transparent;
+  border-right: 140px solid transparent;
+  border-bottom: 82px solid transparent;
+  /* a little smaller */
+  border-top: 98px solid #7392f9;
+  /* a little larger */
+  transform-origin: top;
+  pointer-events: none;
+}
+
+.pocket {
+  border-left: 140px solid #99bbff;
+  border-right: 140px solid #99bbff;
+  border-bottom: 90px solid #b8bfff;
+  border-top: 90px solid transparent;
+  border-bottom-left-radius: 6px;
+  border-bottom-right-radius: 6px;
+}
+
+.letter {
+  position: relative;
+  background-color: whitesmoke;
+  width: 90%;
+  margin-left: auto;
+  margin-right: auto;
+  height: 90%;
+  top: 5%;
+  border-radius: 6px;
+  box-shadow: 0 2px 26px rgba(0, 0, 0, 0.12);
+}
+
+.letter:after {
+  content: "";
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  background-image: linear-gradient(180deg, rgba(255, 255, 255, 0) 25%, rgba(220, 219, 238, 0.7) 55%, #d7d7ef 100%);
+}
+
+.words {
+  position: absolute;
+  left: 10%;
+  width: 80%;
+  height: 14%;
+  background-color: #c2cafb;
+}
+
+.words.line1 {
+  top: 15%;
+  width: 20%;
+  height: 7%;
+}
+
+.words.line2 {
+  top: 30%;
+}
+
+.words.line3 {
+  top: 50%;
+}
+
+.words.line4 {
+  top: 70%;
+}
+
+.open .flap {
+  transform: rotateX(180deg);
+  transition: transform 0.4s ease, z-index 0.6s;
+  z-index: 1;
+}
+
+.close .flap {
+  transform: rotateX(0deg);
+  transition: transform 0.4s 0.6s ease, z-index 1s;
+  z-index: 5;
+}
+
+.close .letter {
+  transform: translateY(0px);
+  transition: transform 0.4s ease, z-index 1s;
+  z-index: 1;
+}
+
+.open .letter {
+  transform: translateY(-60px);
+  transition: transform 0.4s 0.6s ease, z-index 0.6s;
+  z-index: 2;
+}
+
+.hearts {
+  position: absolute;
+  top: 90px;
+  left: 0;
+  right: 0;
+  z-index: 2;
+}
+
+.heart {
+  position: absolute;
+  bottom: 0;
+  right: 10%;
+  pointer-events: none;
+}
+
+.heart:before,
+.heart:after {
+  position: absolute;
+  content: "";
+  left: 50px;
+  top: 0;
+  width: 50px;
+  height: 80px;
+  background: #0e00d0;
+  border-radius: 50px 50px 0 0;
+  transform: rotate(-45deg);
+  transform-origin: 0 100%;
+  pointer-events: none;
+}
+
+.heart:after {
+  left: 0;
+  transform: rotate(45deg);
+  transform-origin: 100% 100%;
+}
+
+.close .heart {
+  opacity: 0;
+  -webkit-animation: none;
+          animation: none;
+}
+
+.a1 {
+  left: 20%;
+  transform: scale(0.6);
+  opacity: 1;
+  -webkit-animation: slideUp 4s linear 1, sideSway 2s ease-in-out 4 alternate;
+  -moz-animation: slideUp 4s linear 1, sideSway 2s ease-in-out 4 alternate;
+  -webkit-animation-fill-mode: forwards;
+          animation-fill-mode: forwards;
+  -webkit-animation-delay: 0.7s;
+          animation-delay: 0.7s;
+}
+
+.a2 {
+  left: 55%;
+  transform: scale(1);
+  opacity: 1;
+  -webkit-animation: slideUp 5s linear 1, sideSway 4s ease-in-out 2 alternate;
+  -moz-animation: slideUp 5s linear 1, sideSway 4s ease-in-out 2 alternate;
+  -webkit-animation-fill-mode: forwards;
+          animation-fill-mode: forwards;
+  -webkit-animation-delay: 0.7s;
+          animation-delay: 0.7s;
+}
+
+.a3 {
+  left: 10%;
+  transform: scale(0.8);
+  opacity: 1;
+  -webkit-animation: slideUp 7s linear 1, sideSway 2s ease-in-out 6 alternate;
+  -moz-animation: slideUp 7s linear 1, sideSway 2s ease-in-out 6 alternate;
+  -webkit-animation-fill-mode: forwards;
+          animation-fill-mode: forwards;
+  -webkit-animation-delay: 0.7s;
+          animation-delay: 0.7s;
+}
+
+@-webkit-keyframes slideUp {
+  0% {
+    top: 0;
+  }
+  100% {
+    top: -600px;
+  }
+}
+@keyframes slideUp {
+  0% {
+    top: 0;
+  }
+  100% {
+    top: -600px;
+  }
+}
+@-webkit-keyframes sideSway {
+  0% {
+    margin-left: 0px;
+  }
+  100% {
+    margin-left: 50px;
+  }
+}
+@keyframes sideSway {
+  0% {
+    margin-left: 0px;
+  }
+  100% {
+    margin-left: 50px;
+  }
 }
 body {
-  background-image: var(--color-bg);
-  min-height: 100vh;
-  display: flex;
-  justify-content: center;
-  align-items: flex-end;
-  overflow: hidden;
+  background-color: #eff1fc;
+}
+
+.envlope-wrapper {
+  height: 250px;
+}
+
+.reset {
   text-align: center;
 }
-h1 {
-  font-size: 3rem;
-  color: white;
-  position: absolute;
-  top: 45%;
-  font-family: "Playfair Display", serif;
+
+.reset button {
+  font-weight: 800;
+  font-style: normal;
+  transition: all 0.1s linear;
+  -webkit-appearance: none;
+  background-color: transparent;
+  border: solid 2px royalblue;
+  border-radius: 4px;
+  color: blue;
+  display: inline-block;
+  font-size: 14px;
+  text-transform: uppercase;
+  margin: 5px;
+  padding: 10px;
+  line-height: 1em;
+  text-decoration: none;
+  min-width: 120px;
+  cursor: pointer;
+}
+
+.reset button:hover {
+  background-color: #99bbff;
+  color: blue;
+}
+
+#message-container {
+  display: flex; /* Now using flexbox */
+  flex-direction: column; /* Stack the message content */
+  align-items: center; /* Center items horizontally */
+  justify-content: center; /* Center items vertically */
+  margin-top: 50px;
+  margin-bottom: 50px;
+}
+
+
+.message-letter {
+  width: 300px;
+  height: 250px;
+  background-color: whitesmoke;
+  border-radius: 10px;
+  box-shadow: 0 2px 26px rgba(0, 0, 0, 0.12);
+  padding: 20px;
+  opacity: 0;
+  transform: translateY(20px);
+  transition: opacity 1s ease, transform 1s ease;
+  align-items: center;
+}
+
+.message-title {
+  font-size: 20px;
+  color: royalblue;
+  font-family: Snell Roundhand, cursive	;;
+  font-weight: bold;
+}
+
+.message-text {
+  font-size: 16px;
+  color: #212b42;
+  font-family: Arial, sans-serif;
+}
+
+/* Animation to fade in message */
+.show-message .message-letter {
   opacity: 1;
-  animation: word-animation 2s ease-in-out forwards;
-}
-.my-name {
-  position: absolute;
-  color: rgba(255, 255, 255, 0.318);
-  top: 60%;
-  animation: word-animation 2s ease-in-out forwards;
-}
-.rain {
-  height: 0.5rem;
-  width: 0.15rem;
-  background-color: rgba(255, 255, 255, 0.432);
-  position: absolute;
-  top: -10px;
-  border-radius: 45%;
-  z-index: 2;
-  animation: rain-drop 1s linear forwards;
-}
-
-@keyframes rain-drop {
-  from {
-    transform: translateY(-100%);
-  }
-  to {
-    transform: translateY(110vh);
-  }
-}
-@keyframes word-animation {
-  to {
-    opacity: 0;
-  }
-}
-
-.flower {
-  position: relative;
-  display: none;
-}
-
-.flower__glass {
-  width: 20vmin;
-  height: 30vmin;
-  background-image: var(--color-glass);
-  clip-path: polygon(0 0, 100% 0, 85% 100%, 15% 100%);
-  opacity: 0.8;
-  position: relative;
-}
-
-.flower__glass::after {
-  content: "";
-  position: absolute;
-  bottom: 0;
-  left: 0;
-  background-color: #182843;
-  width: 100%;
-  height: 2vmin;
-}
-
-.flower__glass::before {
-  content: "";
-  position: absolute;
-  bottom: 0;
-  left: 0;
-  background-image: var(--color-water);
-  width: 100%;
-  height: 15vmin;
-}
-
-.f-wrapper {
-  position: absolute;
-  left: 45%;
-  bottom: 2vmin;
-}
-
-.f-wrapper--2 {
-  left: 50%;
-  bottom: 5%;
-  transform-origin: 10% left;
-  transform: rotate(20deg);
-}
-
-.f-wrapper--3 {
-  left: 30%;
-  bottom: 5%;
-  transform-origin: 10% left;
-  transform: rotate(-10deg);
-}
-
-.f-wrapper--3 .flower__line {
-  height: 45vmin;
-  position: relative;
-}
-
-.f-wrapper--3 .flower__line::after {
-  content: "";
-  position: absolute;
-  left: 0;
-  top: 0;
-  width: 6vmin;
-  height: 6vmin;
-  transform: translate(-69%, -30%) rotate(-5deg);
-  border-radius: 10vmin 10vmin 0 0;
-  border: 2vmin solid #104d4e;
-  border-bottom: transparent;
-  border-left: transparent;
-}
-
-.f-wrapper--3 .flower__line::before {
-  content: "";
-  position: absolute;
-  left: -40%;
-  top: -1%;
-  width: 6vmin;
-  height: 2vmin;
-  transform-origin: right;
-  transform: translate(-100%, -80%) rotate(-20deg);
-  background-color: #104d4e;
-  border-radius: 2vmin;
-}
-
-.f-wrapper--3 .flower__line {
-  background-image: linear-gradient(to top, #142544, #104d4e);
-}
-
-.f-wrapper--2 .flower__line {
-  height: 45vmin;
-}
-
-.f-wrapper--2 .f {
-  transform: translateX(-50%) rotate(20deg);
-}
-
-.f-wrapper--3 .f {
-  transform: translate(-350%, -50%) rotate(-120deg);
-}
-
-.f-wrapper--2 .flower__leaf:not(:first-child) {
-  width: 3.8vmin;
-  height: 10vmin;
-  background-image: linear-gradient(to bottom, #e0ff43, #c22887, #1a233a 99%);
-}
-
-.f-wrapper--3 .flower__leaf:not(:first-child) {
-  width: 3.8vmin;
-  height: 10vmin;
-  background-image: linear-gradient(to bottom, #bfe02b, #712291, #1a233a 99%);
-}
-
-.f-wrapper--3 .flower__leaf--1 {
-  width: 8vmin;
-  height: 10vmin;
-  bottom: 2vmin;
-  background-color: #ad2be0;
-}
-
-.f-wrapper--2 .flower__leaf--1 {
-  width: 8vmin;
-  height: 10vmin;
-  bottom: 2vmin;
-  background-color: #de118b;
-}
-
-.f-wrapper--2 .f .flower__leaf--8 {
-  width: 10vmin;
-  height: 9vmin;
-  bottom: 3vmin;
-  left: -30%;
-  transform: rotate(-50deg);
-  background-image: linear-gradient(to left bottom, #ff43b6, #4d1337);
-}
-
-.f-wrapper--3 .f .flower__leaf--8 {
-  width: 10vmin;
-  height: 9vmin;
-  left: -10% !important;
-  background-image: linear-gradient(to left bottom, #ad2be0, #712291);
-}
-
-.flower__line {
-  width: 2vmin;
-  height: 56vmin;
-  background-image: linear-gradient(to left top, #82fdff 20%, #142544, #104d4e);
-  border-radius: 4vmin;
-}
-
-.f {
-  position: absolute;
-  top: 1vmin;
-  left: 50%;
-  transform: translateX(-50%) rotate(-10deg);
-  width: 2vmin;
-  height: 2vmin;
-}
-
-.flower__leaf {
-  position: absolute;
-  left: 50%;
-  bottom: 2vmin;
-  transform: translateX(-50%);
-  width: 5vmin;
-  height: 14vmin;
-  background-image: linear-gradient(to bottom, #ffa085, #fa7373, #1a233a 99%);
-
-  clip-path: ellipse(50% 50% at 50% 50%);
-  transform-origin: center bottom;
-  animation: open-flower 2s 1s backwards;
-}
-
-.flower__leaf--1 {
-  width: 10vmin;
-  height: 12vmin;
-  bottom: 3vmin;
-  border-radius: 50% 50% 50% 50% / 80% 80% 20% 20%;
-  background-color: #e24f5f;
-  background-image: none;
-  animation: open-flowe--middle 1.4s 1s backwards;
-}
-
-.flower__leaf--2 {
-  transform: translateX(-50%) rotate(-30deg);
-}
-.flower__leaf--3 {
-  transform: translateX(-50%) rotate(-50deg);
-}
-.flower__leaf--4 {
-  transform: translateX(-50%) rotate(-70deg);
-}
-
-.flower__leaf--5 {
-  transform: translateX(-50%) rotate(30deg);
-}
-
-.flower__leaf--6 {
-  transform: translateX(-50%) rotate(50deg);
-}
-
-.flower__leaf--7 {
-  transform: translateX(-50%) rotate(70deg);
-}
-
-.flower__leaf--8 {
-  width: 13vmin;
-  height: 11vmin;
-  bottom: 6vmin;
-  left: -30%;
-  border-radius: none;
-  clip-path: none;
-  border-radius: 10vmin 2vmin 10vmin 2vmin;
-  transform: rotate(-55deg);
-  background-image: linear-gradient(
-    to left bottom,
-    #ffa085,
-    #eb8b8b,
-    #492f2f 98%
-  );
-}
-
-.flower__fall-down--yellow {
-  animation: flower-fall-down-yellow 8s 1.2s linear forwards;
-}
-
-.flower__fall-down--pink {
-  animation: flower-fall-down-pink 5s 1.2s linear forwards;
-}
-
-.flower__fall-down--purple {
-  bottom: 4vmin;
-  animation: flower-fall-down-purple 6s 1.2s linear forwards,
-    flower-falling 6s 7.2s linear infinite;
-}
-
-@keyframes open-flower {
-  0% {
-    transform: translateX(-50%) rotate(0);
-  }
-}
-
-@keyframes open-flowe--middle {
-  0% {
-    opacity: 0;
-    transform: translateX(-50%) scale(0);
-  }
-}
-
-@keyframes flower-fall-down-pink {
-  0% {
-    transform: rotate(-55deg);
-  }
-
-  50% {
-    transform: rotateX(-100deg);
-  }
-
-  100% {
-    transform: translate(2vmin, 28vmin);
-  }
-}
-
-@keyframes flower-fall-down-yellow {
-  0% {
-    transform: rotate(-55deg);
-  }
-
-  50% {
-    bottom: 3vmin;
-    transform: rotateX(-100deg);
-  }
-
-  100% {
-    transform: translate(2vmin, 70vmin) rotate(150deg);
-  }
-}
-
-@keyframes flower-fall-down-purple {
-  0% {
-    transform: rotate(-50deg);
-  }
-
-  25% {
-    bottom: 1vmin;
-    transform: rotateX(-100deg);
-    perspective: 0px;
-  }
-
-  50% {
-    perspective: 0px;
-    transform: translate(-30vmin, 2vmin) rotate(90deg);
-  }
-
-  75% {
-    perspective: 0px;
-    transform: translate(-34vmin, -2vmin);
-  }
-
-  100% {
-    transform-origin: center;
-    transform: translate(-34vmin, -2vmin) rotateY(-80deg) rotateX(35deg);
-  }
-}
-
-@keyframes flower-falling {
-  0%,
-  100% {
-    transform-origin: center;
-    transform: translate(-34vmin, -2vmin) rotateY(-80deg) rotateX(35deg);
-  }
-
-  25% {
-    transform-origin: center;
-    transform: translate(-34.4vmin, -2vmin) rotateY(-84deg) rotateX(35deg);
-  }
-
-  50% {
-    transform-origin: center;
-    transform: translate(-32vmin, -4.2vmin) rotateY(-80deg) rotateX(35deg);
-  }
-
-  75% {
-    transform-origin: center;
-    transform: translate(-36vmin, 1.1vmin) rotateY(-80deg) rotateX(35deg);
-  }
-}
-/* Hide the title initially */
-.hidden {
-  display: none;
-}
-
-/* Style the new title to be white */
-#flower-title {
-  color: white;
-  font-size: 2rem;
-  font-family: 'Playfair Display', serif;
-  text-align: center;
-  margin-top: 20px;
+  transform: translateY(0);
 }
